Delete accidental OSGi Test